--- a/04-Multi-Page-Websites/4.3 HTML Porfolio Project/index.html
+++ b/04-Multi-Page-Websites/4.3 HTML Porfolio Project/index.html
@@ -13,3 +13,32 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HTML Portfolio</title>
+  </head>
+  <body>
+    <h1>Prof Poochie's Portfolio</h1>
+    <h2>I'm a Web Developer</h2>
+    <hr />
+    <a href="./public/movie-ranking.html"><h3>Movie Ranking Project</h3></a>
+    <img
+      src="./assets/images/movie-ranking.png"
+      alt="movie ranking"
+      height="200"
+    />
+    <a href="./public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
+    <img
+      src="./assets/images/birthday-invite.png"
+      alt="birthday invite"
+      height="200"
+    />
+    <hr />
+    <a href="./public/about-me.html">About Me</a>
+    <a href="./public/contact-me.html">Contact Me</a>
+  </body>
+</html>
