--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
       height="200"
     />
     <hr />
-    <a href="./public/about-me.html">About Me</a>
-    <a href="./public/contact-me.html">Contact Me</a>
+    <a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html">Contact Me</a>
   </body>
 </html>
