--- a/06-CSS-Properties/6.1 Font Properties/index.html
+++ b/06-CSS-Properties/6.1 Font Properties/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CSS Properties</title>
+    <style>
+      body {
+        background-color: cornflowerblue;
+        color: white;
+        font-size: 18px;
+      }
 
-<head>
-  <meta charset="UTF-8">
-  <title>CSS Properties</title>
-  <style>
-    body {
-      background-color: cornflowerblue;
-      color: white;
-      font-size: 18px;
-    }
+      /* Don't change the CSS above, add Your CSS below */
+    </style>
+  </head>
 
-    /* Don't change the CSS above, add Your CSS below */
+  <body>
+    <h1>Important CSS Properties</h1>
+    <p>Color</p>
+    <p>Font Size</p>
+    <p>Font Weight</p>
+    <p>Font Family</p>
+    <p>Text Align</p>
 
-    
-  </style>
-</head>
-
-<body>
-  <h1>Important CSS Properties</h1>
-  <p>Color</p>
-  <p>Font Size</p>
-  <p>Font Weight</p>
-  <p>Font Family</p>
-  <p>Text Align</p>
-
-  <!-- TODOs
+    <!-- TODOs
+    Starting today
   1. Change the color of <p>Color</p> to "coral" color.
   2. Change the font size of <p>Font Size</p> to 2X the size of the root font size.
   3. Change the font weight of <p>Font Weight</p> to 900.
@@ -33,6 +31,5 @@
   Link: https://fonts.google.com/specimen/Caveat
   5. Change the <p>Text Align</p> to right align.
   6. Change the the root (html element) font size to 30px -->
-</body>
-
+  </body>
 </html>
