--- a/09-Flexbox/9.4 Flexbox Pricing Table Project/index.html
+++ b/09-Flexbox/9.4 Flexbox Pricing Table Project/index.html
@@ -22,10 +22,11 @@
       }
 
       .pricing-plan {
-        background-color: #eee;
+        flex: 1;
+        max-width: 400px;
         padding: 20px;
-        width: 300px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        background-color: #f2f2f2;
+        border-radius: 5px;
         text-align: center;
       }
 
@@ -48,12 +49,12 @@
         margin-top: 0;
         font-size: 0.8rem;
       }
-      li {
+      .plan-features li {
         padding: 6px 0;
       }
 
       .plan-button {
-        background-color: orangered;
+        background-color: #ff6600;
         border: none;
         color: white;
         padding: 10px 10px;
@@ -62,6 +63,11 @@
         border-radius: 5px;
         cursor: pointer;
         transition: all 0.3s ease-in-out;
+      }
+
+      .plan-button:hover {
+        background-color: #ff6600;
+        transform: scale(1.1);
       }
 
       /* Hint: What can you do with a media query and flexbox? */
