--- a/11-Bootstrap/11.2 Bootstrap Components/index.html
+++ b/11-Bootstrap/11.2 Bootstrap Components/index.html
@@ -29,7 +29,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img src="box-seam.svg" alt="move it brand icon" height="30px" />
-          Move it</a
+          Hello Fresh</a
         >
         <button
           class="navbar-toggler"
@@ -85,28 +85,24 @@
 
     <!-- Hero Section -->
     <div class="px-4 pt-5 my-5 text-center border-bottom">
-      <h1 class="display-4 fw-bold text-body-emphasis">Move With Joy</h1>
+      <h1 class="display-4 fw-bold text-body-emphasis">Hello world</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">
-          Welcome to our website, where we are on a mission to provide
-          exceptional moving services to customers in the US. As a startup, we
-          believe that moving doesn't have to be stressful or complicated, and
-          we are passionate about making the process as seamless and enjoyable
-          as possible.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde sed laborum tempora aliquid atque, consequuntur quidem soluta earum fugit. Recusandae rerum corporis alias earum! Cum omnis facere distinctio eligendi unde corporis explicabo perferendis soluta dolorem sapiente? Quidem perspiciatis itaque perferendis maiores. Expedita tempore, reprehenderit maiores eveniet repellendus tempora obcaecati suscipit?
         </p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
           <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">
-            Get a Quote
+            Click here
           </button>
           <button type="button" class="btn btn-outline-secondary btn-lg px-4">
             Contact US
           </button>
         </div>
       </div>
-      <div class="overflow-hidden" style="max-height: 30vh">
-        <div class="container px-5">
+      <div class="overflow-hidden" style="max-height: 50vh">
+        <div class="container px-2">
           <img
-            src="moving-van.jpg"
+            src="clips.jpeg"
             class="img-fluid border rounded-3 shadow-lg mb-4"
             alt="Example image"
             width="700"
@@ -127,17 +123,12 @@
           >
             <img src="briefcase.svg" alt="briefcase" />
           </div>
-          <h3 class="fs-2 text-body-emphasis">Professional</h3>
+          <h3 class="fs-2 text-body-emphasis">Mail</h3>
           <p>
-            Our team of professional movers are trained to prioritize
-            efficiency, organization, and attention to detail. We understand
-            that your possessions are more than just objects - they are a
-            reflection of your life, memories, and experiences. That's why we
-            take extra care to ensure that everything is packed and transported
-            with the utmost care and attention.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi voluptatum quia quidem praesentium labore in aliquid cum at eum modi quod fuga adipisci illum velit magni, numquam doloremque! Nam, quasi?
           </p>
           <a href="#" class="icon-link">
-            Get a quote
+            Click here
             <img src="chevron-right.svg" alt="chevron-right" />
           </a>
         </div>
@@ -147,17 +138,12 @@
           >
             <img src="bus-front.svg" alt="bus" />
           </div>
-          <h3 class="fs-2 text-body-emphasis">Countrywide</h3>
+          <h3 class="fs-2 text-body-emphasis">Train</h3>
           <p>
-            We offer a range of services to suit your individual needs, whether
-            you're moving locally or across the country. Our team can handle
-            everything from packing and loading to unloading and unpacking, so
-            you can focus on settling into your new home. And with our
-            transparent pricing and no hidden fees, you can trust that you're
-            getting a fair and competitive rate for our services.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cumque atque labore qui, reiciendis ducimus reprehenderit alias aliquam. Voluptatum, laborum qui! Modi excepturi aliquid nihil voluptas laborum temporibus fugit cumque.
           </p>
           <a href="#" class="icon-link">
-            Get a quote
+            Click here
             <img src="chevron-right.svg" alt="chevron-right" />
           </a>
         </div>
@@ -167,17 +153,12 @@
           >
             <img src="chat-square-heart.svg" alt="" />
           </div>
-          <h3 class="fs-2 text-body-emphasis">Personal Touch</h3>
+          <h3 class="fs-2 text-body-emphasis">Heart</h3>
           <p>
-            At our core, we believe that moving should be an exciting and
-            positive experience, not a stressful one. By providing exceptional
-            moving services in the US, we hope to revolutionize the way people
-            think about moving and provide a better, more personalized
-            experience for our customers. Contact us today to learn more about
-            how we can help you with your next move.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe blanditiis minima animi impedit excepturi ex ipsam soluta similique, magni reiciendis omnis perspiciatis dolorum exercitationem eaque eos enim porro quos amet!
           </p>
           <a href="#" class="icon-link">
-            Get a quote
+            Click here
             <img src="chevron-right.svg" alt="chevron-right" />
           </a>
         </div>
@@ -211,13 +192,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="couple.jpg" class="d-block w-100" alt="..." />
+            <img src="europe.jpeg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="dog.jpg" class="d-block w-100" alt="..." />
+            <img src="mountain.jpeg" class="d-block w-100" alt="..." />
           </div>
           <div class="carousel-item">
-            <img src="family.jpg" class="d-block w-100" alt="..." />
+            <img src="seaside.jpeg" class="d-block w-100" alt="..." />
           </div>
         </div>
         <button
@@ -225,8 +206,9 @@
           type="button"
           data-bs-target="#carouselExampleIndicators"
           data-bs-slide="prev"
+          
         >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="carousel-control-prev-icon" aria-hidden="false" ></span>
           <span class="visually-hidden">Previous</span>
         </button>
         <button
